kafka-ui-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 1Gi # Giới hạn RAM để bảo vệ worker node
            requests:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
  namespace: kafka
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kafka-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka
spec:
  rules:
    - host: kafka-ui.imew.lab # URL cho giao diện giám sát
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-svc
                port:
                  number: 80
